# server_api_rust

./: Cargo.toml  README.md  Rocket.toml  database.sqlite  database.sqlite-shm
migrations/2023-04-12-110444_create_rustoceans/: down.sql  up.sql
src/: auth.rs  main.rs  models.rs  schema.rs
