[package]
name = "server_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"]}
base64 = "0.2"
diesel = { version = "2.0", features = ["sqlite", "r2d2"] }
rocket_sync_db_pools = { version = "0.1.0-rc", features = [
    "diesel_sqlite_pool",
] }
